opam-version: "1.2"
maintainer: "Nicolas Ojeda Bar <n.oje.bar@gmail.com>"
authors: "Nicolas Ojeda Bar <n.oje.bar@gmail.com>"
homepage: "https://www.github.com/nojb/ocaml-imap"
dev-repo: "https://www.github.com/nojb/ocaml-imap.git"
bug-reports: "https://www.github.com/nojb/ocaml-imap/issues"
license: "MIT"
depends: [
  "jbuilder" {build}
  "base64"
  "uutf"
  "angstrom"
  "sexplib"
  "ppx_sexp_conv" {build}
  "lwt"
  "lwt_ssl"
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
available: [ocaml-version >= "4.02.3"]
