opam-version: "1.2"
maintainer: "Nicolas Ojeda Bar <n.oje.bar@gmail.com>"
authors: "Nicolas Ojeda Bar <n.oje.bar@gmail.com>"
homepage: "https://www.github.com/nojb/ocaml-imap"
dev-repo: "https://www.github.com/nojb/ocaml-imap.git"
bug-reports: "https://www.github.com/nojb/ocaml-imap/issues"
license: "MIT"
depends: [
  "dune" {build}
  "base64" {>= "2.0.0"}
  "uutf"
  "lwt"
  "lwt_ssl"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
available: [ocaml-version >= "4.02.3"]
